# erminia

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  Makefile  README.md  deny.toml  dummyfile
.github/workflows/: ci.yml  clippy.yml  deny.yml  fmt.yml
crates/ast/src/: ast.rs  expr.rs  lib.rs  object_utils.rs  (+1 more)
crates/erminia/: Cargo.toml
crates/erminia-cli/: Cargo.toml
crates/erminia-lsp/: Cargo.toml
crates/erminia/src/: error.rs  lexer.rs  lib.rs  parser.rs  syntax.rs  token.rs
crates/erminia/src/ast/: ast.rs  ast_trait.rs  expr.rs  mod.rs  printon.rs  stmt.rs  types.rs
crates/erminia/src/ast/obj_utils/: error.rs  iter.rs  mod.rs  obj_call.rs  object_utils.rs  point.rs
crates/erminia/src/config/: mod.rs
crates/erminia/src/diagnostics/: builder.rs  code.rs  diagnostic.rs  diagnostics-improvements.md  diagnostics.rs  location.rs  messages.rs  mod.rs
crates/erminia/src/error/: ast_error.rs  lexer_error.rs  mod.rs  parser_error.rs
crates/erminia/src/lexer/: lex.rs  lex_s.rs  lexer.rs  mod.rs  token.rs
crates/erminia/src/parser/: expr.rs  parse.rs
crates/erminia/src/syntax/: ast.rs  consumers.rs  mod.rs  parse.rs
crates/erminia/src/types/: mod.rs  types.rs
crates/erminia/tests/: test_code.rs  test_lexer.rs  test_parser.rs  test_token.rs
docs/: erminia.md
examples/: bad_malformed_shape.erm  bad_missing_semicolons.erm  bad_multiple_errors.erm  bad_object_desc.erm  bad_wrong_stmt_keyword.erm  basic_objects.erm  comment.erm  comprehensions.erm  full_problem.erm  hello.erm  template_script.erm  var_and_calls.erm
(+25 files in other folders)
