[package]
name = "erminia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = {version = "2.0.1", features = ["from", "display"]}
expect-test = "1.5.1"
logos = "0.15.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
rowan = "0.16.1"
serde = "1.0.219"
serde_json = "1.0.140"
